[gd_scene load_steps=9 format=3 uid="uid://7h215lkey03o"]

[ext_resource type="Script" path="res://level_scenes/11level.gd" id="1_egh5g"]
[ext_resource type="VideoStream" path="res://it_tastes_like_SPRITE/wrong_glitch.ogv" id="2_adkj3"]
[ext_resource type="Theme" uid="uid://fxrgpeh8cmpw" path="res://it_tastes_like_SPRITE_matrix/buttons.tres" id="2_cydo1"]
[ext_resource type="VideoStream" path="res://it_tastes_like_SPRITE/right_glitch.ogv" id="3_aptww"]
[ext_resource type="FontFile" uid="uid://7nwygn2tc1wa" path="res://it_tastes_like_SPRITE_matrix/refinery-25-semi-bold-maisfontes.fbec/refinery-25-semi-bold.ttf" id="3_nnyuy"]
[ext_resource type="Texture2D" uid="uid://dxlqaymo7br1u" path="res://it_tastes_like_SPRITE_matrix/Rectangle 2.png" id="4_gaiwj"]
[ext_resource type="Texture2D" uid="uid://d2msq18r3olfy" path="res://it_tastes_like_SPRITE_matrix/Group 9.png" id="5_3epx1"]
[ext_resource type="Theme" uid="uid://c8i5xk68yki12" path="res://it_tastes_like_SPRITE_matrix/check_box.tres" id="6_sil14"]

[node name="11Level" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 236.0
offset_top = 154.0
offset_right = 1076.0
offset_bottom = 534.0
script = ExtResource("1_egh5g")

[node name="wrong_glitch" type="VideoStreamPlayer" parent="."]
visible = false
layout_mode = 0
offset_left = -256.0
offset_top = -184.0
offset_right = 1024.0
offset_bottom = 616.0
stream = ExtResource("2_adkj3")

[node name="right_glitch" type="VideoStreamPlayer" parent="."]
visible = false
layout_mode = 0
offset_left = -256.0
offset_top = -184.0
offset_right = 1024.0
offset_bottom = 616.0
stream = ExtResource("3_aptww")

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 125.0
offset_right = 505.0
offset_bottom = 169.0
theme = ExtResource("2_cydo1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.639216, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.603922, 0, 1)
theme_override_colors/font_focus_color = Color(0.745098, 0.0627451, 0.623529, 1)
theme_override_fonts/font = ExtResource("3_nnyuy")
theme_override_font_sizes/font_size = 20
text = "Сгенерировать набор векторов"
icon_alignment = 1
expand_icon = true

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 193.0
offset_right = 396.0
offset_bottom = 237.0
theme = ExtResource("2_cydo1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.639216, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.603922, 0, 1)
theme_override_colors/font_focus_color = Color(0.745098, 0.0627451, 0.623529, 1)
theme_override_fonts/font = ExtResource("3_nnyuy")
theme_override_font_sizes/font_size = 21
text = "Сброс"
icon_alignment = 1
expand_icon = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 422.0
offset_top = 193.0
offset_right = 634.0
offset_bottom = 237.0
theme = ExtResource("2_cydo1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.67451, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.690196, 0, 1)
theme_override_colors/font_focus_color = Color(0.858824, 0.164706, 0.670588, 1)
theme_override_fonts/font = ExtResource("3_nnyuy")
theme_override_font_sizes/font_size = 21
text = "Подтвердить"
icon_alignment = 1
expand_icon = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 146.0
offset_top = -151.0
offset_right = 327.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_nnyuy")
theme_override_font_sizes/normal_font_size = 23
text = "Замкнутый класс"

[node name="Rectangle2" type="Sprite2D" parent="."]
position = Vector2(404, 305)
scale = Vector2(1.0386, 1.13636)
texture = ExtResource("4_gaiwj")

[node name="output_2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 177.0
offset_top = 34.0
offset_right = 497.0
offset_bottom = 108.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_nnyuy")
theme_override_font_sizes/normal_font_size = 36

[node name="output_1" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 122.0
offset_top = 269.0
offset_right = 681.0
offset_bottom = 334.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_nnyuy")
theme_override_font_sizes/normal_font_size = 40

[node name="Group10" type="Sprite2D" parent="."]
position = Vector2(650.5, 49.75)
scale = Vector2(0.445804, 0.42381)
texture = ExtResource("5_3epx1")

[node name="input_1" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 125.0
offset_right = 150.0
offset_bottom = 171.0
theme_override_colors/font_color = Color(0.670588, 0.952941, 0.988235, 1)
theme_override_fonts/font = ExtResource("3_nnyuy")
theme_override_font_sizes/font_size = 30

[node name="Rectangle3" type="Sprite2D" parent="input_1"]
position = Vector2(59.5, 23)
scale = Vector2(0.205263, 0.522727)
texture = ExtResource("4_gaiwj")

[node name="Rectangle3" type="Sprite2D" parent="."]
position = Vector2(338, 71.0001)
scale = Vector2(0.585966, 1.02273)
texture = ExtResource("4_gaiwj")

[node name="Group11" type="Sprite2D" parent="."]
position = Vector2(90.7903, 63.25)
scale = Vector2(0.20353, 0.433334)
texture = ExtResource("5_3epx1")

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -151.0
offset_right = -205.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_nnyuy")
theme_override_font_sizes/normal_font_size = 21
text = "Количество
аргументов"

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 661.0
offset_top = 89.0
offset_right = 697.0
offset_bottom = 125.0
theme = ExtResource("6_sil14")

[node name="RichTextLabel" type="RichTextLabel" parent="CheckBox"]
layout_mode = 0
offset_left = -31.0
offset_top = 4.0
offset_right = 5.0
offset_bottom = 40.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_nnyuy")
theme_override_font_sizes/normal_font_size = 32
text = "T0"

[node name="CheckBox2" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 734.0
offset_top = 89.0
offset_right = 770.0
offset_bottom = 125.0
theme = ExtResource("6_sil14")

[node name="RichTextLabel" type="RichTextLabel" parent="CheckBox2"]
layout_mode = 0
offset_left = -24.0
offset_top = 4.0
offset_right = 12.0
offset_bottom = 40.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_nnyuy")
theme_override_font_sizes/normal_font_size = 32
text = "T1"

[node name="CheckBox3" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 585.0
offset_top = 137.0
offset_right = 621.0
offset_bottom = 173.0
theme = ExtResource("6_sil14")

[node name="RichTextLabel" type="RichTextLabel" parent="CheckBox3"]
layout_mode = 0
offset_left = -24.0
offset_top = 4.0
offset_right = 12.0
offset_bottom = 40.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_nnyuy")
theme_override_font_sizes/normal_font_size = 32
text = "S"

[node name="CheckBox4" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 661.0
offset_top = 137.0
offset_right = 697.0
offset_bottom = 173.0
theme = ExtResource("6_sil14")

[node name="RichTextLabel" type="RichTextLabel" parent="CheckBox4"]
layout_mode = 0
offset_left = -24.0
offset_top = 4.0
offset_right = 12.0
offset_bottom = 40.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_nnyuy")
theme_override_font_sizes/normal_font_size = 32
text = "M"

[node name="CheckBox5" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 734.0
offset_top = 137.0
offset_right = 770.0
offset_bottom = 173.0
theme = ExtResource("6_sil14")

[node name="RichTextLabel" type="RichTextLabel" parent="CheckBox5"]
layout_mode = 0
offset_left = -24.0
offset_top = 4.0
offset_right = 12.0
offset_bottom = 40.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_nnyuy")
theme_override_font_sizes/normal_font_size = 32
text = "L"

[node name="CheckBox6" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 585.0
offset_top = 89.0
offset_right = 621.0
offset_bottom = 125.0
theme = ExtResource("6_sil14")

[node name="RichTextLabel" type="RichTextLabel" parent="CheckBox6"]
layout_mode = 0
offset_left = -67.0
offset_top = -4.0
offset_right = 5.0
offset_bottom = 40.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_nnyuy")
theme_override_font_sizes/normal_font_size = 20
text = "Система
полная"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -326.0
offset_top = -320.0
offset_right = 281.0
offset_bottom = -244.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_nnyuy")
theme_override_font_sizes/normal_font_size = 74
text = "Игра: полные системы"

[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CheckBox6" to="." method="_on_check_box_6_pressed"]
